modules/grammars/ide/src/test/resources/cocos/valid/WriteModule.ide
package valid

typedef module WriteModule {
    label "Some Label"

    module someModule: CommonModule

    write someModule to "."
}
