modules/grammars/ide/src/test/resources/cocos/invalid/CommonModule.ide
package invalid

typedef module CommonModule {
     label "Some nice Configuration Type"
}
